ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/Field_Investigation__c.object-meta.xml
<CustomObject>
    <label>Field Investigation</label>
    <nameField>
        <displayFormat>FI-{00000}</displayFormat>
        <label>Field Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Investigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>