ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/AC_Installed__c.field-meta.xml
<CustomField>
    <fullName>AC_Installed__c</fullName>
    <label>AC Installed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>