ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Address_Verified_with_KYC__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified_with_KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Verified with KYC?</label>
    <type>Checkbox</type>
</CustomField>