ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Affiliation_to_e_commerce__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_to_e_commerce__c</fullName>
    <label>Affiliation to e-commerce?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>