ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Agri_Commercial__c.field-meta.xml
<CustomField>
    <fullName>Agri_Commercial__c</fullName>
    <label>Agri Commercial</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Legal Sand mining</fullName>
            </value>
            <value>
                <fullName>Illegal sand mining</fullName>
            </value>
            <value>
                <fullName>Stone Crushing</fullName>
            </value>
            <value>
                <fullName>Bricks manufacturer</fullName>
            </value>
            <value>
                <fullName>Market Load operator</fullName>
            </value>
            <value>
                <fullName>Registered contractor</fullName>
            </value>
            <value>
                <fullName>Sub contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>