ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Any_existing_loans_like_TWHLCARPL__c.field-meta.xml
<CustomField>
    <fullName>Any_existing_loans_like_TWHLCARPL__c</fullName>
    <label>Any existing loans like TW/HL/CAR/PL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>