ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Any_Margin_money_pending_with_dealer__c.field-meta.xml
<CustomField>
    <fullName>Any_Margin_money_pending_with_dealer__c</fullName>
    <label>Any Margin money pending with dealer?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>