ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/ANY_NEGATIVE_OR_CAUTION_PROFILE__c.field-meta.xml
<CustomField>
    <fullName>ANY_NEGATIVE_OR_CAUTION_PROFILE__c</fullName>
    <label>ANY NEGATIVE OR CAUTION PROFILE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>