ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Any_political_relation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Any_political_relation_Remarks__c</fullName>
    <label>Any political relation Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>