ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Applicant_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Recognized__c</fullName>
    <label>Applicant Recognized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>By asking colleague/ watchman etc.; Yes</fullName>
            </value>
            <value>
                <fullName>By asking colleague/ watchman etc.; No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>