ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Approximate_Value_of_Agri_land__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Value_of_Agri_land__c</fullName>
    <label>Approximate Value of Agri land</label>
    <type>TextArea</type>
</CustomField>