ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Are_Co_ordinates_Matching_If_Amber__c.field-meta.xml
<CustomField>
    <fullName>Are_Co_ordinates_Matching_If_Amber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Co-ordinates Matching(If Amber)</label>
    <type>Checkbox</type>
</CustomField>