ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Are_you_ready_for_guarntee_for_this_loan__c.field-meta.xml
<CustomField>
    <fullName>Are_you_ready_for_guarntee_for_this_loan__c</fullName>
    <label>Are you ready for guarntee for this loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>