ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Asset_Model__c.field-meta.xml
<CustomField>
    <fullName>Asset_Model__c</fullName>
    <label>Asset Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>