ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Asset_model_Variant_as_per__c.field-meta.xml
<CustomField>
    <fullName>Asset_model_Variant_as_per__c</fullName>
    <label>Asset model &amp; Variant as per</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealer login</fullName>
            </value>
            <value>
                <fullName>Quotation</fullName>
            </value>
            <value>
                <fullName>As per RC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>