ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Assets_at_Home_Sum_up__c.field-meta.xml
<CustomField>
    <fullName>Assets_at_Home_Sum_up__c</fullName>
    <label>Assets at Home(Sum up)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>