ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Average_no_of_customers__c.field-meta.xml
<CustomField>
    <fullName>Average_no_of_customers__c</fullName>
    <description>Please enter the value</description>
    <label>Average no .of customers(Hourly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>