ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Average_Professional_Fee_Service_Rs__c.field-meta.xml
<CustomField>
    <fullName>Average_Professional_Fee_Service_Rs__c</fullName>
    <label>Average Professional Fee/Service (Rs)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>