ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Average_Ticket_Size_Rs__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket_Size_Rs__c</fullName>
    <label>Average Ticket Size (Rs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>