ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Basic_FI_address_to_be_populated_in_FI__c.field-meta.xml
<CustomField>
    <fullName>Basic_FI_address_to_be_populated_in_FI__c</fullName>
    <label>addr details if KYC address is diff</label>
    <type>TextArea</type>
</CustomField>