ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Borrower_Having_Valid_Driving_licence__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Having_Valid_Driving_licence__c</fullName>
    <label>Borrower Having Valid Driving licence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>