ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/BORROWER_KNOWN_TO_Gurantor_SINCE__c.field-meta.xml
<CustomField>
    <fullName>BORROWER_KNOWN_TO_Gurantor_SINCE__c</fullName>
    <label>BORROWER KNOWN TO Gurantor SINCE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>