ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/BROKER_DETAILS_FOR_HARVESTER__c.field-meta.xml
<CustomField>
    <fullName>BROKER_DETAILS_FOR_HARVESTER__c</fullName>
    <label>BROKER DETAILS FOR HARVESTER</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>