ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Business_Premise__c.field-meta.xml
<CustomField>
    <fullName>Business_Premise__c</fullName>
    <label>Business Premise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Parent Owned</fullName>
            </value>
            <value>
                <fullName>Co Lease</fullName>
            </value>
            <value>
                <fullName>Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>