ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Caste__c.field-meta.xml
<CustomField>
    <fullName>Caste__c</fullName>
    <label>Caste</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forward Caste</fullName>
            </value>
            <value>
                <fullName>Other Backward Caste</fullName>
            </value>
            <value>
                <fullName>Scheduled Caste</fullName>
            </value>
            <value>
                <fullName>Scheduled Tribe</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>