ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>