ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/CATTLE_NAME__c.field-meta.xml
<CustomField>
    <fullName>CATTLE_NAME__c</fullName>
    <label>CATTLE NAME</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>COW</fullName>
            </value>
            <value>
                <fullName>BUFFALO</fullName>
            </value>
            <value>
                <fullName>BULL</fullName>
            </value>
            <value>
                <fullName>GOAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>