ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Enter the name of the city</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>