ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Collection_FI__c.field-meta.xml
<CustomField>
    <fullName>Collection_FI__c</fullName>
    <label>Collection FI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>