ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <formula>IF( Coordinates_Distance__c &gt;=500, IMAGE(&apos;/resource/FI_Ring_Resource/Red_Ring.png&apos;, &apos;Red Ring&apos;,  25, 25),
  IF(AND(Coordinates_Distance__c &lt;500,Coordinates_Distance__c &gt;300),  IMAGE(&apos;/resource/FI_Ring_Resource/Yellow_Ring.png&apos;, &apos;Yellow Ring&apos;,  25, 25), 
 IMAGE(&apos;/resource/FI_Ring_Resource/Green_Ring.png&apos;, &apos;Green Ring&apos;,  25, 25)) )</formula>
    <label>Color Code</label>
    <type>Text</type>
</CustomField>