ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Contact_person_Desingnation__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_Desingnation__c</fullName>
    <label>Contact person Desingnation</label>
    <type>TextArea</type>
</CustomField>