ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Contact_person_Name_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Contact_person_Name_Phone_number__c</fullName>
    <label>Contact person Name &amp; Phone number</label>
    <type>TextArea</type>
</CustomField>