ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Coordinates_Distance__c.field-meta.xml
<CustomField>
    <fullName>Coordinates_Distance__c</fullName>
    <formula>DISTANCE( FI_Location__c ,  KYC_Location__c , &apos;km&apos;) * 1000</formula>
    <label>Coordinates Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>