ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Coordinates_Verified__c.field-meta.xml
<CustomField>
    <fullName>Coordinates_Verified__c</fullName>
    <formula>IF( Coordinates_Distance__c &lt;= $CustomMetadata.GeoCode_Co_ordinates_Range__mdt.GreenResidenceFI.End_Range__c,  
    TEXT($CustomMetadata.GeoCode_Co_ordinates_Range__mdt.GreenResidenceFI.Color__c),
   ( IF( AND( $CustomMetadata.GeoCode_Co_ordinates_Range__mdt.AmberResidenceFI.Start_Range__c &lt;  Coordinates_Distance__c, 
              Coordinates_Distance__c &lt;  $CustomMetadata.GeoCode_Co_ordinates_Range__mdt.AmberResidenceFI.End_Range__c),  
              TEXT($CustomMetadata.GeoCode_Co_ordinates_Range__mdt.AmberResidenceFI.Color__c),
              ( IF( $CustomMetadata.GeoCode_Co_ordinates_Range__mdt.RedResidenceFI.Start_Range__c &lt;= Coordinates_Distance__c, 
                    TEXT($CustomMetadata.GeoCode_Co_ordinates_Range__mdt.RedResidenceFI.Color__c),NULL
))
))
)</formula>
    <label>Coordinates Verified</label>
    <type>Text</type>
</CustomField>