ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Crop_details_cultivated_last_year__c.field-meta.xml
<CustomField>
    <fullName>Crop_details_cultivated_last_year__c</fullName>
    <inlineHelpText>Crop Name, KHARIF/RABI/SUMMER, Acres, YEILD/ACRE, Sold Price</inlineHelpText>
    <label>Crop details cultivated last year</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>