ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Crop_Net_income__c.field-meta.xml
<CustomField>
    <fullName>Crop_Net_income__c</fullName>
    <label>Crop Net income</label>
    <summarizedField>Crop_Detail__c.Net_Income__c</summarizedField>
    <summaryForeignKey>Crop_Detail__c.Field_Investigation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>