ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Crop_sold_to_any_specific_person__c.field-meta.xml
<CustomField>
    <fullName>Crop_sold_to_any_specific_person__c</fullName>
    <label>Crop sold to any specific person</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>