ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Current_Addr_is_different_than_KYC_Addr__c.field-meta.xml
<CustomField>
    <fullName>Current_Addr_is_different_than_KYC_Addr__c</fullName>
    <label>Current Addr is different than KYC Addr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>