ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Current_cropping_pattern_details__c.field-meta.xml
<CustomField>
    <fullName>Current_cropping_pattern_details__c</fullName>
    <inlineHelpText>Crop Name, KHARIF/RABI/SUMMER, Acres, YEILD/ACRE, Sold Price</inlineHelpText>
    <label>Current cropping pattern details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>