ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Current_experience_years__c.field-meta.xml
<CustomField>
    <fullName>Current_experience_years__c</fullName>
    <description>Enter the years of work experience</description>
    <label>Current experience years</label>
    <length>50</length>
    <type>Text</type>
</CustomField>