ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Customer_house_same_as_in_application__c.field-meta.xml
<CustomField>
    <fullName>Customer_house_same_as_in_application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether customer house located in the same address as in the application</description>
    <label>Customer house same as in application</label>
    <type>Checkbox</type>
</CustomField>