ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Declared_Income_During_Application__c.field-meta.xml
<CustomField>
    <fullName>Declared_Income_During_Application__c</fullName>
    <label>Declared Income During Application</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>