ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/DEPLOYMENT_OF_ASSET__c.field-meta.xml
<CustomField>
    <fullName>DEPLOYMENT_OF_ASSET__c</fullName>
    <label>DEPLOYMENT OF ASSET</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE USES</fullName>
            </value>
            <value>
                <fullName>AGRI CUM COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>AGRI HIRING</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>