ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Distance_from_Borrower_to_Co_borrower__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Borrower_to_Co_borrower__c</fullName>
    <label>Distance from Borrower to Co-borrower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>