ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Distance_from_Branch_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Branch_to_customer__c</fullName>
    <label>Distance from Branch to current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>