ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Do_you_have_any_government_contracts__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_government_contracts__c</fullName>
    <label>Do you have any government contracts?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>