ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/DocUploaded_if_Current_KYC_Addre_Diff__c.field-meta.xml
<CustomField>
    <fullName>DocUploaded_if_Current_KYC_Addre_Diff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Upload document if Current Address and KYC is marked as different on FI screen</description>
    <label>DocUploaded_if_Current&amp;KYC_Addre_Diff</label>
    <type>Checkbox</type>
</CustomField>