ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Electricity_Connection_Present__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Connection_Present__c</fullName>
    <label>Electricity Connection Present?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>