ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Estimated_Average_Income_per_month__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Average_Income_per_month__c</fullName>
    <description>Please enter the value</description>
    <label>Estimated Average Income per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>