ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Estimated_Income_as_per_FI__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Income_as_per_FI__c</fullName>
    <label>Estimated Income as per FI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>