ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Estimated_Service_FI__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Service_FI__c</fullName>
    <description>Please enter the value</description>
    <label>Estimated Service FI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>