ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Estimated_Total_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Monthly_Income__c</fullName>
    <description>Please enter the value</description>
    <label>Estimated Total Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>