ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Existing_no_of_vehicles__c.field-meta.xml
<CustomField>
    <fullName>Existing_no_of_vehicles__c</fullName>
    <label>Existing no of vehicles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Assets</fullName>
            </value>
            <value>
                <fullName>Only 4 wheeler or 2 wheeler</fullName>
            </value>
            <value>
                <fullName>More than one 4 wheeler</fullName>
            </value>
            <value>
                <fullName>More than two 4 wheeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>