ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Existing_other_Loan_details__c.field-meta.xml
<CustomField>
    <fullName>Existing_other_Loan_details__c</fullName>
    <inlineHelpText>LOAN TYPE
MODEL NAME
BANK NAME 
WHEN YOU HAVE AVAILED
LOAN EMI
HOW MANY EMI PAID</inlineHelpText>
    <label>Existing other Loan details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>