ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Existing_Tractor_Loan_details__c.field-meta.xml
<CustomField>
    <fullName>Existing_Tractor_Loan_details__c</fullName>
    <inlineHelpText>LOAN TYPE
MODEL NAME
BANK NAME
WHEN YOU HAVE AVAILED
LOAN EMI
HOW MANY EMI PAID
MODEL NAME
PURCHASE DATE
LOAN FREE OR FINANCED FROM
BANK NAME LOAN AMOUNT
IF SECOND HAND PURCHASED
Name transferred or not
purchsed from 
what was the purchased price
when you have purchsed the same</inlineHelpText>
    <label>Existing Tractor Loan details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>