ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Expense_of_higher_education_of_family__c.field-meta.xml
<CustomField>
    <fullName>Expense_of_higher_education_of_family__c</fullName>
    <label>Expense of higher education of family</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>