ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/expenses_for_Medical__c.field-meta.xml
<CustomField>
    <fullName>expenses_for_Medical__c</fullName>
    <label>Expenses for Medical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>