ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Expenses_for_vehicle_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Expenses_for_vehicle_maintenance__c</fullName>
    <label>Expenses for vehicle maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>