ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Father_DOB__c.field-meta.xml
<CustomField>
    <fullName>Father_DOB__c</fullName>
    <label>Father DOB</label>
    <type>Date</type>
</CustomField>