ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>FI_Address_Line_2__c</fullName>
    <description>To store addr if current addr is diff from permanent addr</description>
    <label>FI Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>