ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_City__c.field-meta.xml
<CustomField>
    <fullName>FI_City__c</fullName>
    <label>FI City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>