ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_District__c.field-meta.xml
<CustomField>
    <fullName>FI_District__c</fullName>
    <label>FI District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>