ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>FI_Feedback__c</fullName>
    <label>FI Feedback</label>
    <length>100</length>
    <type>Text</type>
</CustomField>