ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_Location__c.field-meta.xml
<CustomField>
    <fullName>FI_Location__c</fullName>
    <label>FI Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>