ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_OBSERVATION_1__c.field-meta.xml
<CustomField>
    <fullName>FI_OBSERVATION_1__c</fullName>
    <label>FI OBSERVATION</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>