ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_Observation__c.field-meta.xml
<CustomField>
    <fullName>FI_Observation__c</fullName>
    <label>FI Observation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>