ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>FI_Pin_Code__c</fullName>
    <label>FI Pin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>