ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_Request_Generation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FI_Request_Generation_Date_Time__c</fullName>
    <label>FI Request Generation Date And Time</label>
    <type>DateTime</type>
</CustomField>