ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_RESULT__c.field-meta.xml
<CustomField>
    <fullName>FI_RESULT__c</fullName>
    <label>FI RESULT</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>