ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_State__c.field-meta.xml
<CustomField>
    <fullName>FI_State__c</fullName>
    <label>FI State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>